<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="app_name">MemorAh</string>
    <string name="btnPlay">Play</string>
    <string name="btnCollection">Collection</string>
    <string name="textSounds">Sounds</string>
    <string name="textMusic">Music</string>
    <string name="textScore">Score</string>
    <string name="jeux">Play</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficultyEasy">Easy</string>
    <string name="difficultyMedium">Medium</string>
    <string name="difficultyHard">Hard</string>
    <string name="instructions">Uncover two matching cards at once\nto eliminate them from the game.\nBeware of the timer, the less the time you take the more you score\nbut make sure to finish before timer runs out.</string>
    <string name="resultWinText1">You won!</string>
    <string name="resultWinText2">Nice work, you can always improve your best time</string>
    <string name="resultTime">Your time : </string>
    <string name="resultLostText1">Nice  try, but you lost.</string>
    <string name="resultLostText2">Try improving the score to win</string>
    <string name="collection">Collection</string>


</resources>
